apps/homepage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    network-dns-egress: "true"
