apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: homepage
          image: gethomepage/homepage:v2.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "250Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3000
              httpHeaders:
                - name: Host
                  value: start.wevelsiep.com
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3000
              httpHeaders:
                - name: Host
                  value: start.wevelsiep.com
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3

          volumeMounts:
            - name: homepage
              mountPath: /app/config
              subPath: config
            - name: homepage
              mountPath: /app/public/icons
              subPath: icons
            - name: homepage
              mountPath: /app/public/images
              subPath: images
            - name: disk-00-2tb
              mountPath: /mnt/00_2tb
              readOnly: true
            - name: disk-01-2tb
              mountPath: /mnt/01_2tb
              readOnly: true
            - name: disk-pool
              mountPath: /mnt/pool
              readOnly: true
            - name: disk-pool02
              mountPath: /mnt/pool02
              readOnly: true

      volumes:
        - name: homepage
          persistentVolumeClaim:
            claimName: homepage-pvc
        - name: disk-00-2tb
          persistentVolumeClaim:
            claimName: homepage-disk-00-2tb-pvc
            readOnly: true
        - name: disk-01-2tb
          persistentVolumeClaim:
            claimName: homepage-disk-01-2tb-pvc
            readOnly: true
        - name: disk-pool
          persistentVolumeClaim:
            claimName: homepage-disk-pool-pvc
            readOnly: true
        - name: disk-pool02
          persistentVolumeClaim:
            claimName: homepage-disk-pool02-pvc
            readOnly: true
