apps/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-lan
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`start.wevelsiep.com`)
      kind: Rule
      services:
        - name: homepage
          port: 80
  tls:
    options:
      name: mtls-required
      namespace: traefik
